# lychee-landing-page

./: .dockerignore  .gitignore  .golangci.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  comparison.html  go.mod  go.sum  index.html  lychee-download.html  main.go
.github/: CODEOWNERS
anthropic/: README.md  anthropic.go  anthropic_test.go  fuzz_test.go  trace.go
api/: client.go  client_test.go  fuzz_test.go  types.go  types_compose.go  types_memory.go  types_router.go  types_structured.go
app/: .gitignore  README.md  ollama.iss  ollama.rc
auth/: auth.go
cmake/: local.cmake  windows-arm64-llvm-mingw.cmake
cmd/: cmd.go  cmd_agent.go  cmd_auth.go  cmd_bench.go  cmd_catalog.go  cmd_community.go  cmd_compare.go  cmd_compare_test.go  cmd_completion.go  cmd_compose.go  cmd_copy.go  cmd_create.go  cmd_delete.go  cmd_embed.go  cmd_embed_test.go  cmd_export.go  cmd_generate.go  cmd_generate_test.go  cmd_helpers.go  cmd_inspect.go  cmd_launcher_test.go  cmd_list.go  cmd_modelfile.go  cmd_publish.go  cmd_pull.go  cmd_push.go  cmd_quantize.go  cmd_run.go  cmd_scan.go  cmd_search.go  cmd_serve.go  cmd_show.go  cmd_stats.go  cmd_stop.go  cmd_test.go  community_registry.go  community_registry_test.go  extras.go  hf.go  hf_catalog.go  (+6 more)
convert/: convert.go  convert_bert.go  tensor.go  (+39 more)
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/lychee/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml
sdk/rust/src/: error.rs  lib.rs
sdk/rust/tests/: integration_test.rs
(+666 files in other folders)
