[package]
name = "lychee-rs"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for Lychee LLM Engine"
license = "MIT"
repository = "https://github.com/lychee/lychee/tree/main/sdk/rust"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
thiserror = "1.0"
bytes = "1.0"

[dev-dependencies]
mockito = "1.0"
